--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:coverage": "vitest run --coverage --watch=false"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.12",
