--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "jsx": "react-jsx",
     "types": ["vite/client", "vite-plugin-svgr/client"]
   },
-  "include": ["src", "vite.config.ts", "vite-env.d.ts"]
+  "include": ["src", "vite.config.ts", "vite-env.d.ts", "cypress.config.ts"]
 }
