--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,17 +23,17 @@ jobs:
         run: pnpm test
 
       - name: Lint
-        run: pnpm run lint
+        run: pnpm lint
 
       - name: Build
-        run: pnpm run build
+        run: pnpm build
 
       - name: Cypress Browser Tests
         uses: cypress-io/github-action@v4
         with:
           browser: chrome
           start: pnpm start
-          wait-on: 'http://localhost:3000'
+          wait-on: 'http://localhost:5173/'
           wait-on-timeout: 180
         # Uncomment to enable i18n debug logging which will be shown in the step logs.
         # env:
