--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "the-system",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
