--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,16 +11,13 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
     "plugin:import/react",
     "plugin:import/typescript",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime",
     "plugin:jsx-a11y/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/strict-type-checked",
+    "plugin:@typescript-eslint/stylistic-type-checked",
     "plugin:prettier/recommended",
     "plugin:react-hooks/recommended"
   ],
@@ -44,35 +41,24 @@
     }
   },
   "rules": {
-    "import/default": "off",
-    "import/named": "off",
-    "import/newline-after-import": "warn",
     "import/no-named-as-default": "off",
-    "import/no-named-as-default-member": "off",
     "import/order": "off", // using prettier plugin
     "prettier/prettier": "error",
-    "react/prop-types": "off",
-    "react/self-closing-comp": "warn",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_[iI]gnored" }],
-    "@typescript-eslint/restrict-template-expressions": "off"
-  },
-  "overrides": [
-    {
-      "files": "**.test.ts?(x)",
-      "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:prettier/recommended",
-        "plugin:testing-library/react"
-      ],
-      "rules": {
-        "@typescript-eslint/no-unsafe-assignment": "off",
-        "@typescript-eslint/no-unsafe-member-access": "off"
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      { "prefer": "type-imports", "disallowTypeAnnotations": true, "fixStyle": "inline-type-imports" }
+    ],
+    "@typescript-eslint/restrict-template-expressions": [
+      "error",
+      {
+        "allowAny": false,
+        "allowBoolean": true,
+        "allowNullish": false,
+        "allowNumber": true,
+        "allowRegExp": false,
+        "allowNever": false
       }
-    }
-  ]
+    ]
+  }
 }
