--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@sentry/react": "7.113.0",
     "@sentry/tracing": "7.113.0",
     "clsx": "2.1.1",
-    "framer-motion": "11.1.8",
+    "framer-motion": "11.1.9",
     "i18next": "23.11.3",
     "i18next-browser-languagedetector": "7.2.1",
     "i18next-http-backend": "2.5.1",
@@ -18,14 +18,14 @@
     "react-dom": "18.3.1",
     "react-i18next": "14.1.1",
     "rxjs": "7.8.1",
-    "sass": "1.76.0",
-    "typescript": "5.4.5"
+    "sass": "1.77.0"
   },
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx && eslint ./cypress --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint ./src && eslint ./cypress",
+    "lint:fix": "eslint --fix ./src && eslint --fix ./cypress",
     "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
     "test": "vitest",
     "test:coverage": "vitest run --coverage --watch=false"
@@ -57,6 +57,7 @@
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
+    "typescript": "5.4.5",
     "vite": "^5.2.11",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
