--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "react-dom": "18.3.1",
     "react-i18next": "14.1.1",
     "rxjs": "7.8.1",
-    "sass": "1.76.0",
-    "typescript": "5.4.5"
+    "sass": "1.77.0"
   },
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx && eslint ./cypress --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint ./src && eslint ./cypress",
+    "lint:fix": "eslint --fix ./src && eslint --fix ./cypress",
     "prettier": "prettier --write 'src/**/*.(js|ts|tsx|scss)'",
     "test": "vitest",
     "test:coverage": "vitest run --coverage --watch=false"
@@ -53,10 +53,12 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-sonarjs": "^1.0.3",
     "eslint-plugin-testing-library": "6.2.2",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-organize-imports": "3.2.4",
+    "typescript": "5.4.5",
     "vite": "^5.2.11",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
