--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Node",
+    "strict": true,
     "lib": ["es5", "dom"],
     "types": ["cypress"]
   },
