--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.5.2",
-    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
-    "@sentry/react": "7.117.0",
-    "@sentry/tracing": "7.114.0",
+    "@sentry/browser": "^9.12.0",
+    "@sentry/react": "9.12.0",
+    "@sentry/tracing": "7.120.3",
     "clsx": "2.1.1",
-    "framer-motion": "11.2.14",
-    "i18next": "23.11.5",
-    "i18next-browser-languagedetector": "7.2.1",
-    "i18next-http-backend": "2.5.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-i18next": "14.1.3",
-    "rxjs": "7.8.1",
-    "sass": "1.77.8"
+    "framer-motion": "12.7.3",
+    "i18next": "25.0.0",
+    "i18next-browser-languagedetector": "8.0.4",
+    "i18next-http-backend": "3.0.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-i18next": "15.4.1",
+    "rxjs": "7.8.2",
+    "sass": "1.86.3"
   },
   "scripts": {
     "start": "vite",
@@ -31,38 +32,39 @@
     "test:coverage": "vitest run --coverage --watch=false"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "16.0.0",
-    "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.14.11",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.16.1",
-    "@typescript-eslint/parser": "7.16.1",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "cypress": "13.13.1",
+    "@eslint/compat": "^1.2.8",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.14.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/coverage-v8": "^3.1.1",
+    "cypress": "14.3.0",
     "cypress-log-to-output": "1.1.2",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-cypress": "3.3.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.9.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-sonarjs": "^1.0.3",
-    "eslint-plugin-testing-library": "6.2.2",
-    "jsdom": "^24.0.0",
-    "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "4.0.0",
-    "typescript": "5.5.3",
-    "vite": "^5.2.11",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-import-resolver-typescript": "4.3.2",
+    "eslint-plugin-cypress": "4.2.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-testing-library": "7.1.1",
+    "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
+    "prettier": "3.5.3",
+    "prettier-plugin-organize-imports": "4.1.0",
+    "typescript": "5.8.3",
+    "vite": "^6.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.1"
   },
   "browserslist": [
     ">0.2%",
