--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "inlineSources": true,
     "sourceRoot": "/",
     "jsx": "react-jsx",
-    "types": ["vite/client", "vite-plugin-svgr/client"]
+    "types": ["vite/client"]
   },
   "include": ["src", "vite.config.ts", "vite-env.d.ts", "cypress.config.ts"]
 }
