--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
@@ -77,5 +79,5 @@
     "last 1 firefox version",
     "last 1 safari version"
   ],
-  "packageManager": "pnpm@9.1.0"
+  "packageManager": "pnpm@10.8.1"
 }
